@@ -9452,4 +9452,7 @@
   <block id="7a3a71e57296fe130d591f2dd4a7a06c" category="paragraph">Debe sustituir la batería afectada en E4000 si Recovery Guru en SANtricity System Manager indica el estado «Error de batería o se requiere reemplazo de batería». Para proteger sus datos, la batería debe reemplazarse lo antes posible.</block>
   <block id="8c34b0fdf9a967369992b78c08820091" category="list-text">Con el mango de leva en la posición abierta, deslice el controlador completamente en el estante.</block>
   <block id="1b6c46128dc1faef9365a16d700d5e74" category="list-text">Instale la controladora de reemplazo en la bandeja.</block>
+  <block id="bd720a6ead0034815d9206b7292e06e5" category="section-title">Nuevas características en la versión 11.90R2</block>
+  <block id="15829e6cc8b585193d8f6910a672107c" category="inline-link">Notas de la versión de E-Series 11,90</block>
+  <block id="a4c34f83987821dd1d99ef73febdd962" category="paragraph">Esta versión contiene solo cambios menores y no nuevas características. Para obtener más información sobre los cambios en esta versión, consulte la<block ref="1f7d7124974a1c2e3017c1729625e686" category="inline-link-rx"></block>.</block>
 </blocks>
