@@ -1,6 +1,6 @@
 ---
 settings:
-  name: E-Series Systems
+  name: E-Series storage systems
   internal:
     pdf_enabled: true
   prod:
